Readded the sprint_id parameter for the server variables controller as it necessary to rewrite the routes correctly althoug the parameter is not specified in the routes

--- a/app/views/rb_taskboards/show.html.erb
+++ b/app/views/rb_taskboards/show.html.erb
@@ -11,7 +11,8 @@
 
   <%= javascript_include_tag url_for(:controller => 'rb_server_variables',
                                      :action => 'show',
-                                     :project_id => @project) %>
+                                     :project_id => @project,
+                                     :sprint_id => @sprint) %>
 
   <%= stylesheet_link_tag 'backlogs/jqplot.css' %>
   <%= stylesheet_link_tag 'backlogs/taskboard.css', :media => 'print,screen' %>
