--- a/app/assets/stylesheets/backlogs/master_backlog.css.sass
+++ b/app/assets/stylesheets/backlogs/master_backlog.css.sass
@@ -58,9 +58,10 @@
     width: 100%
 
 /*
- *this adds space at the bottom of the main content div to leave enough space
- *for the menu without cutting it even if the bottom backlog does not contain
- *any elements
+ * this adds space at the bottom of the main content div to leave enough space
+ * for the menu without cutting it even if the bottom backlog does not contain
+ * any elements
+ */
 
 .controller-rb_master_backlogs.action-index #content
   padding-bottom: 180px
@@ -265,7 +266,7 @@
     .axislabel
       font-weight: bold
 
-/* In-place Sprint Editor
+// In-place Sprint Editor
 
 #rb #backlogs_container
   .sprint.editing
@@ -302,14 +303,14 @@
       font-size: 0.8rem
     .type_id.editor
       width: expression( document.body.clientWidth > 99 ? "100px" : "auto" )
-      /* sets max-width for IE
-      max-width: 100px
-      /* for the cool guys
+      // sets max-width for IE
+      max-width: 130px
+      // for the cool guys
     .subject.editor
       min-width: 19em
       width: 53%
     .status_id.editor
-      width: 68px
+      width: 130px
       float: right
     .story_points.editor
       float: right
